examples/expected/check_pipeline_deterministic_violation.txt
error[E2005]: impure function in deterministic pipeline: step 'bad' has forbidden effect Random
help: remove non-deterministic calls (random/time) from steps or drop @deterministic
  --> examples/pipeline/deterministic_violation.tp:5:10
   |
 5 |     step("bad") { random() },
   |          ^^^^^^^^^^^^^^^^^^^
